完成商品查询接口